Fixing the image wrapping when the image isn't big enough the fill the full div.  Altering the training so it will redirect back to a pre-configured url when done.  Fixing a minor error in the csv file on one of the scenarios.  Adding a space in "Calm[]Thinking" Adding some details to the README file regarding deploying just the training to a staging environment.

--- a/src/app/scenario/scenario.component.scss
+++ b/src/app/scenario/scenario.component.scss
@@ -36,6 +36,7 @@
       padding-top:20px;
       height: 580px;
       border-radius: 0 0 25px 25px;
+      background-repeat: no-repeat;
     }
 
 
